# zshcs

./: .octocov.yml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  nix.yml  pinact-check.yml
docs/: ARCHITECTURE.md
src/: main.rs
