[package]
name = "zshcs"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] } # Add serde and enable the derive feature
serde_json = "1.0" # Added to create JSON RPC messages in test code
lsp-types = "0.97" # Added to reference types in test code
futures = "0.3" # Added for asynchronous processing in tests
dashmap = "6.1.0"
tempfile = "3.23.0"
